configuring the search bar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,19 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
+  "strictPropertyInitialization": false,
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "@app/*": ["src/app/*"],
+      "@shared/*": ["src/app/shared/*"],
+      "@environment/*": ["src/environments/*"],
+      "@characters/*": ["src/app/components/pages/characters/*"],
+      "@pages/*": ["src/app/components/pages/*"]
+    },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "strict": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
